--- a/nodeapi/package.json
+++ b/nodeapi/package.json
@@ -23,7 +23,8 @@
     "http-errors": "~1.6.2",
     "i18n": "^0.8.3",
     "mongoose": "^5.2.5",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "nodemailer": "^4.6.8"
   },
   "devDependencies": {
     "cross-env": "^5.2.0"
