--- a/nodeapi/.env.example
+++ b/nodeapi/.env.example
@@ -3,3 +3,5 @@ MONGOOSE_CONNECTION_STRING=mongodb://localhost:27017/cursonode
 SIMULATE_EMAILS_TO_EXAMPLE_COM=true
 SENDGRID_USER=user
 SENDGRID_PASSWORD=pass
+
+JWT_SECRET=use_your_secret_string
