--- a/nodeapi/package.json
+++ b/nodeapi/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^5.2.0",
     "http-errors": "~1.6.2",
     "i18n": "^0.8.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.5",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
